Update Java functional programming instructions for JDK 25
- Revised descriptions and references to align with new instruction files.
- Enhanced clarity on the use of unnamed variables and patterns in functional programming.
- Updated sections on Stream Gatherers and Scoped Values to reflect new features and best practices.
- Improved naming conventions and documentation standards for better readability and consistency.
- Removed outdated exception handling guidelines and added new rules for handling expected business failures.
- Streamlined testing standards and emphasized the use of Mockito only at infrastructure boundaries.